manifests/external-ingress/hass-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`hass.juicewizerd.com`)
      kind: Rule
      services:
        - kind: Service
          name: hass
          namespace: default
          port: 8123
      middlewares:
        - name: crowdsec
  tls:
    secretName: juicewizerd-le-com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: hass
  namespace: default
spec:
  externalName: 192.168.1.86
  type: ExternalName
  ports:
    - port: 8123
