manifests/external-ingress/jellyfin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-local-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host jellyfin.juicewizerd.com
      secretName: juicewizerd-le-com-tls
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  externalName: 192.168.1.92
  type: ExternalName
  ports:
    - port: 8096
