manifests/external-ingress/miniflux-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-crowdsec-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host miniflux.juicewizerd.com
      secretName: juicewizerd-le-com-tls
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: default
spec:
  externalName: 192.168.1.93
  type: ExternalName
  ports:
    - port: 8089
