manifests/external-ingress/uptime-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime2.juicewizerd.com`)
      kind: Rule
      services:
        - kind: Service
          name: uptime
          namespace: default
          port: 3001
      middlewares:
        - name: crowdsec-authelia
  tls:
    secretName: juicewizerd-le-com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: default
spec:
  externalName: 192.168.1.86
  type: ExternalName
  ports:
    - port: 3001
